Fix YouTube userContent and add custom scrollbars to it

--- a/userContent.css
+++ b/userContent.css
@@ -33,12 +33,18 @@
 
 /* Transparent Theme for Dark Mode YouTube */
 @-moz-document domain(youtube.com) {
-	html:not(.style-scope)[dark],
-	:not(.style-scope)[dark] {
+	html:not(.style-scope),
+	:not(.style-scope) {
 		--yt-app-background: var(--background-color) !important;
 		--yt-main-app-background: var(--background-color) !important;
 		--yt-main-app-background-tmp: var(--background-color) !important;
 		--yt-guide-background: var(--background-color) !important;
+		--yt-spec-general-background-a: var(--background-color) !important;
+	}
+
+	:root {
+		scrollbar-width: thin !important;
+		scrollbar-color: #272727 var(--background-color) !important;
 	}
 }
 
